--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,137 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "PA1_template"
+author: "Sofia Riccomagno"
+date: "16/02/2020"
+output: html_document
 ---
 
+# Reproducible Research: Peer Assessment 1
+*The dataset can be downloaded [here](https://github.com/sofiariccomagno/RepData_PeerAssessment1/blob/master/activity.zip). More information can be found in the [README](https://github.com/sofiariccomagno/RepData_PeerAssessment1/blob/master/README.md).*
 
 ## Loading and preprocessing the data
+### Show any code that is needed to 
+1. Load the data (i.e. read.csv())
+2. Process/transform the data (if necessary) into a suitable format for your analysis
 
+```{r, echo=TRUE, message=FALSE}
+#Load the dataset into RStudio
+activity<-read.csv("activity.csv")
 
+#Load libraries for graphs and pretty colours
+library(ggplot2)
+library(dplyr)
+library(viridis)
+library(wesanderson)
+```
+```{r,echo=TRUE}
+#Check the dataset loaded correctly and find out more about the variables
+str(activity)
+```
+
+The variables included in the dataset are:  
+- **steps**: Number of steps taking in a 5-minute interval (missing values are coded as
+NA)  
+- **date**: The date on which the measurement was taken in YYYY-MM-DD format  
+- **interval**: Identifier for the 5-minute interval in which measurement was taken  
 
 ## What is mean total number of steps taken per day?
+### For this part of the assignment, you can ignore the missing values in the dataset.
+1. Calculate the total number of steps taken per day
+2. Make a histogram of the total number of steps taken each day
+3. Calculate and report the mean and median of the total number of steps taken per day
 
+```{r, echo=TRUE}
+#Point 1
+StepsPerDay<-aggregate(activity$steps, by=list(activity$date), FUN=sum)
+colnames(StepsPerDay)<-c("Date", "Steps")
+head(StepsPerDay)
 
+#Point 2
+g<-ggplot(StepsPerDay,aes(Steps))
+g+geom_histogram(boundary=0,binwidth=2500,fill=plasma(9))+
+  ggtitle("Histogram of Steps per Day")+xlab("Steps")+ylab("Frequency")+
+  theme(plot.title=element_text(face="bold",hjust=0.5))+
+  scale_x_continuous(breaks=seq(0,25000,by=2500))+
+  scale_y_continuous(breaks=seq(0,18, by=2))
+
+#Point 3
+mean(StepsPerDay$Steps,na.rm=TRUE)
+median(StepsPerDay$Steps, na.rm=TRUE)
+```
 
 ## What is the average daily activity pattern?
+1. Make a time series plot (i.e. type="l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
+```{r, echo=TRUE}
+#Point 1
+StepsPerTime<-aggregate(steps ~ interval, data=activity, FUN=mean, na.rm=TRUE)
+StepsPerTime$time<-StepsPerTime$interval/100
+h<-ggplot(StepsPerTime, aes(time,steps))
+h+geom_line(col=wes_palette("GrandBudapest2",1))+
+  ggtitle("Average number of Steps per Time Interval")+
+  xlab("Time")+ylab("Steps")+theme(plot.title=element_text(face="bold",hjust=0.5))
 
+#Point 2
+maxsteps<-tbl_df(StepsPerTime)  
+maxsteps%>% select(time, steps) %>% filter(steps==max(maxsteps$steps))
+```
 
 ## Imputing missing values
+### Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+4. Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
+```{r,echo=TRUE}
+#Point 1
+missing<-tbl_df(activity)
+missing %>% filter(is.na(steps)) %>% summarize(missing_values = n())
 
+#Point 2
+activity$CompleteSteps<-ifelse(is.na(activity$steps),
+                               round(StepsPerTime$steps[match(activity$interval,
+                                                              StepsPerTime$interval)],0), 
+                               activity$steps)
+activityfull<-data.frame(steps=activity$CompleteSteps, interval=activity$interval, 
+                         date=activity$date)
+head(activityfull)
+
+#Point 3
+StepsPerDayFull<-aggregate(activityfull$steps, by=list(activityfull$date), FUN=sum)
+colnames(StepsPerDayFull)<-c("Date", "Steps")
+
+#Point 4
+g<-ggplot(StepsPerDayFull, aes(Steps))
+g+geom_histogram(boundary=0, binwidth=2500, fill=magma(9))+
+  ggtitle("Histogram of Steps per Day")+xlab("Steps")+ylab("Frequency")+
+  theme(plot.title = element_text(face="bold", hjust=0.5))+
+  scale_x_continuous(breaks=seq(0,25000,by=2500))+scale_y_continuous(breaks=seq(0,26,by=2))
+
+mean(StepsPerDayFull$Steps)
+median(StepsPerDayFull$Steps)
+```
+We can see that omitting the NAs doesn't significantly change the values of mean and median.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+### For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+2. Make a panel plot containing a time series plot (i.e.type="l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+```{r,echo=TRUE}
+#Point 1
+activityfull$RealDate<-as.Date(activityfull$date, format = "%Y-%m-%d")
+activityfull$Weekday<-weekdays(activityfull$RealDate)
+activityfull$DayType<-ifelse(activityfull$Weekday=='Saturday' | activityfull$Weekday=='Sunday',
+                               'Weekend','Weekday')
+head(activityfull)
+#Point 2
+StepsPerTimeWK<-aggregate(steps~interval+DayType,data=activityfull,FUN=mean,na.rm=TRUE)
+StepsPerTimeWK$time<-StepsPerTime$interval/100
+j<-ggplot(StepsPerTimeWK, aes(time, steps))
+j+geom_line(col=wes_palette("FantasticFox1",1))+
+  ggtitle("Average Steps per Time Interval: Weekdays vs. Weekends")+
+  xlab("Time")+ylab("Steps")+
+  theme(plot.title = element_text(face="bold", hjust=0.5))+
+  facet_grid(DayType ~ .)
+```
